# Segmentation-With-Synthetic-Crack

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.sh
CrackSegmentation/: dataloader.py  inference.py  only_inference.py  segmentation.py  train.py
GroundedSAM/: segmentation.py
MakeCrack/: make_crack.py  segmentation.py
tools/: concat.py  noise_remove.py
